--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "patrickdorancomnodeexpress",
+  "name": "PatrickDoran.com-NodeExpress",
   "version": "1.0.0",
-  "description": "PatrickDoran.com site rebuilt with Node and Express",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PatD/PatrickDoran.com-NodeExpress.git"
   },
-  "author": "Patrick M. Doran",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/PatD/PatrickDoran.com-NodeExpress/issues"
   },
   "homepage": "https://github.com/PatD/PatrickDoran.com-NodeExpress#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  },
   "dependencies": {
     "express": "^4.17.1"
   }
