Add react timeline. Convert class component to function component.

--- a/projects.json
+++ b/projects.json
@@ -1,5 +1,6 @@
 [
     {
+      "id":1,
       "Title": "React Adventure Game Engine",
       "Repo": "https://github.com/PatD/react-adventure-game-engine",
       "Link": "https://react-adventure-game-engine.netlify.app",
@@ -7,15 +8,15 @@
       "Role": "Front-End Developer ",
       "Description": "An adventure game engine in the 1980's pixelstyle, built on React.js via Create React App. Playable in its current form with an included sample game. "
     },
-    {
-      "Title": "NCDOT Citizen Action Reporting App",
+    {"id":2,
+      "Title": "NCDOT Citizen Action Reporting",
       "Repo": "https://github.com/PatD",
       "Link": "https://www.ncdot.gov/about-us/our-mission/Performance/Pages/citizen-action-request-report.aspx",
       "Image": "patrickdoran_work_CARS_vue3.png",
       "Role": "Front-End Developer ",
       "Description": "Dynamic citizen reporting and filtering application, built with Vue 3.1 and Vite, hosted in SharePoint."
     },
-    {
+    {"id":3,
       "Title": "NCDOT CPL Letting List",
       "Repo": "https://github.com/PatD",
       "Link": "https://connect.ncdot.gov/letting/let-list/",
@@ -23,7 +24,7 @@
       "Role": "Front-End Developer ",
       "Description": "Using Vue, Vuex, Tabulator JS, SharePoint, local storage, and ArcGIS ESRI maps to inform statkeholders about thousands of future projects."
     },
-    {
+    {"id":4,
       "Title": "NCDMV Office Locations Map",
       "Repo": "https://github.com/PatD",
       "Link": "https://www.ncdot.gov/dmv/offices-services/locate-dmv-office/",
@@ -31,23 +32,23 @@
       "Role": "Front-End Developer ",
       "Description": "Millions of licensed drivers across the state of North Carolina, and most will need to travel to a physical office for an ID. Hundreds of offices, but no easy way to know what was near you. This effort loads offices on a map from REST services, with relevant data, driving directions, and hours of operation. Utilizes Vue.js, Vuex, Leaflet.js, Bing Maps, REST services, geolocation, all on a public-facing SharePoint site."
     },
-    {
-      "Title": "NCDOT Letting Rollup Dashboard",
+    {"id":5,
+      "Title": "NCDOT Letting Rollup",
       "Repo": "https://github.com/PatD",
       "Link": "https://connect.ncdot.gov/letting/Pages/letting-roll-up.aspx",
       "Image": "patrick_doran_web_lettingrollup.PNG",
       "Role": "Front-End Developer ",
       "Description": "Developed to help construction companies stay up to date on the latest project lettings. Utilizes JavaScript, local storage, and open source libraries like Tabulator, Moment.js, and Office Fabric UI on a public-facing SharePoint site."
     },
-    {
-      "Title": "North Carolina DMV REAL ID Wizard",
+    {"id":6,
+      "Title": "NCDMV REAL ID Wizard",
       "Repo": "https://github.com/PatD",
       "Link": "https://www.ncdot.gov/dmv/real-id-wizard",
       "Image": "patrick_doran_web_realidwizard.PNG",
       "Role": "Developer, Designer ",
       "Description": "Built to help citizens navigate the requirements of getting a REAL ID driver license. Utilizes Vue.js and Vue-CLI on a public-facing SharePoint site."
     },
-    {
+    {"id":7,
       "Title": "United GIFs of America",
       "Repo": "https://github.com/PatD/United-GIFs-of-America",
       "Link": "https://gifsamerica.netlify.app",
@@ -55,7 +56,7 @@
       "Role": "Developer, Designer ",
       "Description": "Combined the Giphy API, vanilla JavaScript, offline storage, and SVG maps to allow the citizen to easily identify and save their state&apos;s offical GIF."
     },
-    {
+    {"id":8,
       "Title": "Complete I-540 Project Map",
       "Repo": "https://github.com/PatD",
       "Link": "https://www.ncdot.gov/projects/complete-540/Pages/planned-construction-activities.aspx",
